--- a/css/components/carousel.css
+++ b/css/components/carousel.css
@@ -5,6 +5,8 @@
   width: 99%;
   overflow: hidden;
 
+  position: absolute;
+
   /* position absolute makes carousel disappear */
   white-space: nowrap;
   padding: 55px 0 0 0;
@@ -67,7 +69,7 @@
   border-radius: 14px;
 }
 
-@keyframes slide-horizontal {
+/* @keyframes slide-horizontal {
   0% {
     left: 100%;
   }
@@ -75,7 +77,7 @@
   100% {
     left: -100%;
   }
-}
+} */
 
 /* BOTTOM CAROUSEL - BUTTON */
 
@@ -135,5 +137,66 @@ button {
 
   .table-content button {
     padding: 7px;
+  }
+}
+
+/* NEW CAROUSEL */
+
+/* ++++++++++++++ */
+
+/* TOP CAROUSEL - AUTOPLAY-LOOP */
+.auto-carousel-container {
+  padding: 63px 0 90px 0;
+}
+
+.auto-carousel__sub-container,
+.slider {
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel__content {
+  gap: 20px;
+  animation: slide-horizontal 12s linear infinite;
+  padding-right: 20px;
+
+  width: 100%;
+}
+
+.carousel-label {
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+#aptment-time,
+#aptment {
+  margin-top: 15px;
+  font-size: 15px;
+}
+
+#aptment-time img {
+  width: 10%;
+  margin-right: 10px;
+}
+
+#aptment {
+  margin-right: 20px;
+}
+
+.carousel-img-layer {
+  filter: brightness(80%);
+  border-radius: 22px;
+}
+
+@keyframes slide-horizontal {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
   }
 }
